// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configs reducer should handle END_SERVICE_CONFIG_ARCHIVED_SETTING 1`] = `
Object {
  "byId": Object {
    "234": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 234,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "235": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 235,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "236": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 236,
      "statuses": Array [],
    },
    "237": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 237,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "238": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 238,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "239": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 239,
      "statuses": Array [],
    },
    "240": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 240,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "241": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 241,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "242": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 242,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "243": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 243,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "244": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 244,
      "statuses": Array [],
    },
    "245": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 245,
      "statuses": Array [],
    },
    "246": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 246,
      "statuses": Array [],
    },
    "247": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 247,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "248": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 248,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "249": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 249,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "250": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 250,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "251": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 251,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "252": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 252,
      "statuses": Array [],
    },
    "345": Object {
      "archived": true,
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 345,
      "processing": false,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
  },
  "items": Array [
    234,
    235,
    236,
    237,
    238,
    239,
    240,
    241,
    242,
    243,
    244,
    245,
    246,
    247,
    248,
    249,
    250,
    251,
    252,
    345,
  ],
  "loaded": true,
  "offset": 20,
  "total": 60,
}
`;

exports[`configs reducer should handle START_SERVICE_CONFIG_ARCHIVED_SETTING 1`] = `
Object {
  "byId": Object {
    "234": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 234,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "235": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 235,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "236": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 236,
      "statuses": Array [],
    },
    "237": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 237,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "238": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 238,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "239": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 239,
      "statuses": Array [],
    },
    "240": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 240,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "241": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 241,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "242": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 242,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "243": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 243,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "244": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 244,
      "statuses": Array [],
    },
    "245": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 245,
      "statuses": Array [],
    },
    "246": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 246,
      "statuses": Array [],
    },
    "247": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 247,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "248": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 248,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "249": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 249,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "250": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 250,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "251": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 251,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "252": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 252,
      "statuses": Array [],
    },
    "345": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 345,
      "processing": true,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
  },
  "items": Array [
    234,
    235,
    236,
    237,
    238,
    239,
    240,
    241,
    242,
    243,
    244,
    245,
    246,
    247,
    248,
    249,
    250,
    251,
    252,
    345,
  ],
  "loaded": true,
  "offset": 20,
  "total": 60,
}
`;

exports[`configs reducer should return the initial state 1`] = `
Object {
  "activeLabelId": null,
  "byId": Object {},
  "byLabelId": Object {},
  "expIds": Object {
    "data": Object {},
    "loaded": false,
  },
}
`;
